# PyNN

./: LICENSE  PyNN.py  PyNN2.py  PyNN3.py  PyNN4.py  PyNN5.py  PyNN_old.py  README.md  pyproject.toml  setup.py
pynn/: CNN.py  MNIST.py  PyNN.py  __init__.py  benchmark.py  binary_classification.py  categorical_classification.py  dx.py  regression.py
